--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Test</title>
-  </head>
-  <body>
-    <h1>Welcome</h1>
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <title>Test</title>
+    </head>
+    <body>
+        <PageHeader title="Frontpage"></PageHeader>
+
+        <script src="app/build/app.js"></script>
+    </body>
 </html>
